--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <h1>Picture This!</h1>
       <h4>My Really Cool Blog Post</h4>
     </div>
-    <img src="images/museum.jpg" alt="placeholder">
+    <picture>
+      
+    </picture>
 
   </header>
 </body>
