adds source for square image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
       <h4>My Really Cool Blog Post</h4>
     </div>
     <picture>
+      <source 
+      media="(min-width: 960px)"
+      sizes="50vw"
+      srcset="
+      images/museum-480x-square.jpg 480w,
+      images/museum-960x-square.jpg 960w,
+      images/museum-1280x-square.jpg 1280w,
+      images/museum-1440x-square.jpg 1440w,
+      images/museum-1600x-square.jpg 1600w,
+      images/museum-1920x-square.jpg 1920w,
+      images/museum-2400x-square.jpg 2400w">
       
     </picture>
 
