--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
       images/museum-1600x-square.jpg 1600w,
       images/museum-1920x-square.jpg 1920w,
       images/museum-2400x-square.jpg 2400w">
-      
+
+      <source
+      media="(max-width: 960px)"
+      sizes="100vw"
+      srcset="
+      images/museum-320x-landscape.jpg 320w,
+      images/museum-480x-landscape.jpg 480w,
+      imagees/museum-640x-landscape.jpg 640w,
+      images/museum-720x-landscape.jpg 720w,
+      images/museum-960x-landscape.jpg 960w,
+      images/museum-1440x-landscape.jpg 1440w,
+      images/museum-1920x-landscape.jpg 1920w,
+      images/museum-2160x-landscape.jpg 2160w,
+      images/museum-2880x-landscape.jpg 2880w">
+
+      <img src="images/museum-480x-landscape.jpg" alt="museum gallery with comfy seating">
+
     </picture>
 
   </header>
